# api/openapi.yaml
@@ -42,7 +42,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/CreateQuoteResponse'
+                $ref: '#/components/schemas/QuoteResponse'
         "400":
           description: Bad Request
           content:
@@ -62,6 +62,22 @@ paths:
             type: string
             minLength: 1
             example: Charles Dickens
+        - name: cursor_id
+          in: query
+          required: false
+          explode: true
+          schema:
+            type: string
+            format: uuid
+            minLength: 36
+            maxLength: 36
+        - name: cursor_created_at
+          in: query
+          required: false
+          explode: true
+          schema:
+            type: string
+            format: date-time
       responses:
         '200':
           description: get quotes response
@@ -112,7 +128,7 @@ components:
       required:
         - text
         - author_id
-    CreateQuoteResponse:
+    QuoteResponse:
       type: object
       properties:
         id:
@@ -136,10 +152,28 @@ components:
         - text
         - author_id
     GetQuotesResponse:
-      type: array
-      items:
-        $ref: '#/components/schemas/CreateQuoteResponse'
+      type: object
+      properties:
+        quotes:
+          description: Array of quotes.
+          type: array
+          items:
+            $ref: '#/components/schemas/QuoteResponse'
+        next_cursor:
+          $ref: '#/components/schemas/NextCursor'
+      required:
+        - quotes
       description: List of quotes.
+    NextCursor:
+      type: object
+      properties:
+        id:
+          type: string
+        created_at:
+          type: string
+      required:
+        - id
+        - created_at
     Detail:
       type: object
       properties:
