# internal/handlers/get_quotes_handler.go
@@ -2,6 +2,7 @@ package handlers
 
 import (
 	"net/http"
+	"time"
 
 	"github.com/GoCodingX/gorilla/internal/repository"
 	"github.com/GoCodingX/gorilla/pkg/gen/openapi"
@@ -16,23 +17,38 @@ func (s *QuotesService) GetQuotes(c echo.Context, params openapi.GetQuotesParams
 	}
 
 	// query via the repo layer
-	quotes, err := s.repo.GetQuotes(c.Request().Context(), &repository.GetQuotesParams{
-		Author: params.Author,
+	repoQuotes, cursor, err := s.repo.GetQuotes(c.Request().Context(), &repository.GetQuotesParams{
+		Author:          params.Author,
+		CursorCreatedAt: params.CursorCreatedAt,
+		CursorID:        params.CursorId,
 	})
 	if err != nil {
 		return err
 	}
 
 	// prepare http response payload
-	responsePayload := make([]openapi.CreateQuoteResponse, len(quotes))
-	for i, q := range quotes {
-		responsePayload[i] = openapi.CreateQuoteResponse{
+	quotes := make([]openapi.QuoteResponse, len(repoQuotes))
+	for i, q := range repoQuotes {
+		quotes[i] = openapi.QuoteResponse{
 			Id:       q.ID,
 			Text:     q.Text,
 			AuthorId: q.AuthorID,
 		}
 	}
 
+	var nextCursor *openapi.NextCursor
+	if cursor != nil {
+		nextCursor = &openapi.NextCursor{
+			CreatedAt: cursor.CreatedAt.Format(time.RFC3339),
+			Id:        cursor.ID.String(),
+		}
+	}
+
+	response := openapi.GetQuotesResponse{
+		Quotes:     quotes,
+		NextCursor: nextCursor,
+	}
+
 	// respond
-	return c.JSON(http.StatusCreated, responsePayload)
+	return c.JSON(http.StatusCreated, response)
 }
