# internal/repository/types.go
@@ -1,5 +1,18 @@
 package repository
 
+import (
+	"time"
+
+	"github.com/google/uuid"
+)
+
 type GetQuotesParams struct {
-	Author *string
+	Author          *string
+	CursorCreatedAt *time.Time
+	CursorID        *uuid.UUID
+}
+
+type QuotesCursor struct {
+	CreatedAt time.Time
+	ID        uuid.UUID
 }
